--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </section>
     <section id="content" class="container">
         <div class="row pb-5">
-            <div class="card-group">
-                <div class="card border-0">
+            <div class="card-group w-100">
+                <div class="card border-0 p-5">
                     <div class="row h-100  align-items-center">
                         <div class="col">
                             <h2 class="featurette-heading">Easy to use.&nbsp;<span class="text-muted">It'll blow your
@@ -57,9 +57,57 @@
                         </div>
                     </div>
                 </div>
-                <div class="card border-0">
+                <div class="card border-0 p-5">
                     <img class="img-fluid mx-auto" style="height: 500px;" src="asset/img/phoneMockup.png"
                         data-holder-rendered="true">
+                </div>
+            </div>
+        </div>
+        <div class="row pb-5">
+            <div class="card-group w-100">
+                <div class="card border-0 p-5">
+                    <div class="row h-100  align-items-center">
+                        <div class="col">
+                            <h5 class="text-muted">Kenapa Harus LiveTask?</h5>
+                            <h2 class="featurette-heading">Tester Header</h2>
+                            <p class="lead text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                Consequatur
+                                dolorum nostrum possimus quia sequi, corrupti, dolor magnam iste veritatis debitis vitae
+                                quod impedit ut nam. Inventore ullam quia veritatis voluptates.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card border-0 p-5">
+                    <div class="row mb-5">
+                        <div class="col col-md-3">
+                            <img class="rounded-circle"
+                                src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                                alt="Generic placeholder image" width="100" height="100">
+                        </div>
+                        <div class="col col-md-9 d-flex align-items-center">
+                            <p class="lead"><strong>Akses</strong> dimanapun dan kapanpun melalui smartphone anda.</p>
+                        </div>
+                    </div>
+                    <div class="row mb-5">
+                        <div class="col col-md-3">
+                            <img class="rounded-circle"
+                                src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                                alt="Generic placeholder image" width="100" height="100">
+                        </div>
+                        <div class="col col-md-9 d-flex align-items-center">
+                            <p class="lead"><strong>Akses</strong> dimanapun dan kapanpun melalui smartphone anda.</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col col-md-3">
+                            <img class="rounded-circle"
+                                src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                                alt="Generic placeholder image" width="100" height="100">
+                        </div>
+                        <div class="col col-md-9 d-flex align-items-center">
+                            <p class="lead"><strong>Akses</strong> dimanapun dan kapanpun melalui smartphone anda.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -108,10 +156,10 @@
             <h3>Follow Us</h3>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Facebook</a></li>
+                <li class="list-inline-item"><a href="#">Twitter</a></li>
                 <li class="list-inline-item"><a href="#">Instagram</a></li>
-                <li class="list-inline-item"><a href="#">Github</a></li>
             </ul>
-            <p>2020 &#169;Copyright Zipfolder Indonesia All Rights Reserved</p>
+            <p>2020 • &#169;Copyright Zipfolder Indonesia • All Rights Reserved</p>
         </div>
     </footer>
 
