--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="asset/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>LiveTask</title>
 </head>
 
@@ -20,7 +24,13 @@
                         <a href="#" class="navbar-brand d-flex align-items-center">
                             <strong>LiveTask</strong>
                         </a>
-                        <button type="button" class="btn btn-outline-success">Pelajari Selengkapnya</button>
+
+                        <div class="navbar">
+                            <a class="nav-item nav-link" href="#">About</a>
+                            <a class="nav-item nav-link" href="#" onclick="scrollClick('team')">Team</a>
+                            <button type="button" class="btn btn-outline-success">Pelajari Selengkapnya</button>
+                        </div>
+
                     </div>
                 </div>
             </header>
@@ -111,7 +121,7 @@
                 </div>
             </div>
         </div>
-        <div class="row pb-3">
+        <div id="team" class="row pb-3">
             <div class="col mx-auto">
                 <div class="text-center">
                     <h2>Our Team</h2>
@@ -119,7 +129,7 @@
             </div>
         </div>
         <div class="row pb-5">
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-3 text-center">
                 <div class="p-3">
                     <img class="rounded-circle"
                         src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
@@ -129,7 +139,7 @@
                 <p>Muhammad Imam Taufiq</p>
                 <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-3 text-center">
                 <div class="p-3">
                     <img class="rounded-circle"
                         src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
@@ -139,7 +149,7 @@
                 <p>Yosua Kristianto</p>
                 <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
             </div>
-            <div class="col-lg-4 text-center">
+            <div class="col-lg-3 text-center">
                 <div class="p-3">
                     <img class="rounded-circle"
                         src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
@@ -147,6 +157,16 @@
                 </div>
                 <h3>Co-Founder</h3>
                 <p>Made Raja Adi</p>
+                <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
+            </div>
+            <div class="col-lg-3 text-center">
+                <div class="p-3">
+                    <img class="rounded-circle"
+                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                        alt="Generic placeholder image" width="200" height="200">
+                </div>
+                <h3>Co-Founder</h3>
+                <p>Hafiz Bukhari</p>
                 <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
             </div>
         </div>
@@ -162,7 +182,7 @@
             <p>2020 • &#169;Copyright Zipfolder Indonesia • All Rights Reserved</p>
         </div>
     </footer>
-
+    <script src="asset/js/index.js"></script>
 </body>
 
 </html>
