fix styling, add our photo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </a>
 
                         <div class="navbar">
-                            <a class="nav-item nav-link" href="#">About</a>
+                            <a class="nav-item nav-link"href="#" onclick="scrollClick('about')">Why LiveTask?</a>
                             <a class="nav-item nav-link" href="#" onclick="scrollClick('team')">Team</a>
                             <button type="button" class="btn btn-outline-success">Pelajari Selengkapnya</button>
                         </div>
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="row pb-5">
+        <div id="about" class="row pb-5">
             <div class="card-group w-100">
                 <div class="card border-0 p-5">
                     <div class="row h-100  align-items-center">
@@ -131,47 +131,47 @@
         <div class="row pb-5">
             <div class="col-lg-3 text-center">
                 <div class="p-3">
-                    <img class="rounded-circle"
-                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                    <img class="rounded-circle grayscale"
+                        src="asset/img/imam.jpg"
                         alt="Generic placeholder image" width="200" height="200">
                 </div>
                 <h3>Co-Founder</h3>
                 <p>Muhammad Imam Taufiq</p>
-                <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
+                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
             </div>
             <div class="col-lg-3 text-center">
                 <div class="p-3">
-                    <img class="rounded-circle"
-                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                    <img class="rounded-circle grayscale"
+                        src="asset/img/cua.jpg"
                         alt="Generic placeholder image" width="200" height="200">
                 </div>
                 <h3>Co-Founder</h3>
                 <p>Yosua Kristianto</p>
-                <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
+                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
             </div>
             <div class="col-lg-3 text-center">
                 <div class="p-3">
-                    <img class="rounded-circle"
-                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                    <img class="rounded-circle grayscale"
+                        src="asset/img/made.jpg"
                         alt="Generic placeholder image" width="200" height="200">
                 </div>
                 <h3>Co-Founder</h3>
                 <p>Made Raja Adi</p>
-                <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
+                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
             </div>
             <div class="col-lg-3 text-center">
                 <div class="p-3">
-                    <img class="rounded-circle"
-                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                    <img class="rounded-circle grayscale"
+                        src="asset/img/hafiz.jpg"
                         alt="Generic placeholder image" width="200" height="200">
                 </div>
                 <h3>Co-Founder</h3>
                 <p>Hafiz Bukhari</p>
-                <p><a href="#" class="btn btn-secondary"><i class="fa fa-linkedin"></i></a></p>
+                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
             </div>
         </div>
     </section>
-    <footer class="bd-footer text-muted bg-dark">
+    <footer id="footer" class="bd-footer text-muted">
         <div class="container-fluid p-3 p-md-5">
             <h3>Follow Us</h3>
             <ul class="list-inline">
