add scroll top fab

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+    <a id="scroll-top" href="#" class="btn btn-md rounded-circle" role="button">
+        <i class="fa fa-chevron-up"></i>
+    </a>
     <section id="header">
         <div id="header-img">
             <header class="container">
