fix fab (ketutupan card klo tampilan mobile)

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     </section>
     <section id="content" class="container">
         <div class="row pb-5">
-            <div class="card-group w-100">
-                <div class="card border-0 p-5">
+            <div class="card-group w-100 ">
+                <div class="card border-0 p-5 bg-transparent">
                     <div class="row h-100  align-items-center">
                         <div class="col">
                             <h2 class="featurette-heading">Easy to use.&nbsp;<span class="text-muted">It'll blow your
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card border-0 p-5">
+                <div class="card border-0 p-5 bg-transparent">
                     <img class="img-fluid mx-auto" style="height: 500px;" src="asset/img/phoneMockup.png"
                         data-holder-rendered="true">
                 </div>
@@ -102,7 +102,7 @@
         </div>
         <div id="about" class="row pb-5">
             <div class="card-group w-100">
-                <div class="card border-0 p-5">
+                <div class="card border-0 p-5 bg-transparent">
                     <div class="row h-100  align-items-center">
                         <div class="col">
                             <h5 class="text-muted">Kenapa Harus LiveTask?</h5>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card border-0 p-5">
+                <div class="card border-0 p-5 bg-transparent">
                     <div class="row mb-5">
                         <div class="col col-md-3">
                             <img class="rounded-circle"
