--- a/index.html
+++ b/index.html
@@ -41,18 +41,14 @@
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="fa fa-bars"></span>
                     </label>
-                    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="fa fa-bars"></span>
-                    </button> -->
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-item nav-link" href="#" onclick="scrollClick('about')">Why
-                                    LiveTask?</a>
+                                <a class="nav-item nav-link" href="#" onclick="scrollClick('about')">Tentang
+                                    Kami</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-item nav-link" href="#" onclick="scrollClick('team')">Team</a>
+                            <li class="nav-item active">
+                                <a class="nav-item nav-link" href="#" onclick="scrollClick('howto')">Panduan</a>
                             </li>
                             <li class="nav-item">
                                 <button type="button" class="btn btn-outline-success">Pelajari
@@ -67,132 +63,130 @@
                     <h1 class="display-4 font-weight-normal">LiveTask</h1>
                     <p class="lead font-weight-normal">Create Your Own Portfolio With Your Project</p>
                     <button class="btn btn-outline-light btn-icon-text"> <i
-                            class="fa fa-android btn-icon-prepend mdi-36px"></i> <span class="d-inline-block text-left">
-                            <small class="font-weight-light d-block">Get it on the</small> Google Play </span> </button>
+                            class="fa fa-android btn-icon-prepend mdi-36px"></i> <span
+                            class="d-inline-block text-center">
+                            <small class="font-weight-light d-block">Unduh melalui</small> Google Play </span> </button>
                     <button class="btn btn-outline-light btn-icon-text"> <i
-                            class="fa fa-apple btn-icon-prepend mdi-36px"></i> <span class="d-inline-block text-left">
-                            <small class="font-weight-light d-block">Available on the</small> App Store </span>
+                            class="fa fa-apple btn-icon-prepend mdi-36px"></i> <span class="d-inline-block text-center">
+                            <small class="font-weight-light d-block">Tersedia juga di</small> App Store </span>
                     </button>
                 </div>
             </div>
         </div>
     </section>
-    <section id="content" class="container">
+    <section id="about" class="container">
         <div class="row pb-5">
             <div class="card-group w-100 ">
                 <div class="card border-0 p-5">
                     <div class="row h-100  align-items-center">
                         <div class="col">
-                            <h2 class="featurette-heading">Easy to use.&nbsp;<span class="text-muted">It'll blow your
-                                    mind.</span></h2>
-                            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula
-                                porta
-                                felis
-                                euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce
-                                dapibus,
-                                tellus ac cursus commodo.</p>
+                            <h5 class="text-muted">Ingin Terlihat Profesional?</h5>
+                            <h2 class="featurette-heading">Coba LiveTask Sekarang!</h2>
+                            <p class="lead text-justify">Aplikasi ini membantumu dalam mengelola
+                                proyek melalui <i>smartphone</i>. Kamu dapat merintis, mengelola, dan menjalankan proyek
+                                layaknya profesional</p>
                         </div>
                     </div>
                 </div>
                 <div class="card border-0 p-5 ">
-                    <img class="img-fluid mx-auto" style="height: 500px;" src="asset/img/phoneMockup.png"
-                        data-holder-rendered="true">
+                    <img class="img-fluid mx-auto w-75" src="asset/img/phoneMockup.png" data-holder-rendered="true">
                 </div>
             </div>
         </div>
-        <div id="about" class="row pb-5">
+        <div class="row pb-5">
             <div class="card-group w-100">
                 <div class="card border-0 p-5 ">
                     <div class="row h-100  align-items-center">
                         <div class="col">
                             <h5 class="text-muted">Kenapa Harus LiveTask?</h5>
-                            <h2 class="featurette-heading">Tester Header</h2>
-                            <p class="lead text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                Consequatur
-                                dolorum nostrum possimus quia sequi, corrupti, dolor magnam iste veritatis debitis vitae
-                                quod impedit ut nam. Inventore ullam quia veritatis voluptates.</p>
+                            <h2 class="featurette-heading">Satu Aplikasi Untuk Mendorong Produktivitasmu</h2>
+                            <p class="lead text-justify">
+                                LiveTask memberikan <strong>kemudahan</strong>, dan <strong>efisiensi</strong> untuk
+                                mengelola proyek serta bangun portofolio <strong>profesional</strong>mu.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="card border-0 p-5 ">
                     <div class="row mb-5">
-                        <div class="col col-md-3">
-                            <img class="rounded-circle"
+                        <div class="col col-md-3 d-block d-md-flex align-items-md-center">
+                            <img class="rounded-circle w-100"
                                 src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                                alt="Generic placeholder image" width="100" height="100">
+                                alt="Generic placeholder image">
                         </div>
-                        <div class="col col-md-9 d-flex align-items-center">
-                            <p class="lead"><strong>Akses</strong> dimanapun dan kapanpun melalui smartphone anda.</p>
+                        <div class="col col-md-9 d-block d-md-flex align-items-md-center">
+                            <p class="lead"><strong>Mudah</strong> digunakan dengan berbagai fitur penunjang di
+                                dalamnya.</p>
                         </div>
                     </div>
                     <div class="row mb-5">
-                        <div class="col col-md-3">
-                            <img class="rounded-circle"
+                        <div class="col col-md-3 d-block d-md-flex align-items-md-center">
+                            <img class="rounded-circle w-100"
                                 src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                                alt="Generic placeholder image" width="100" height="100">
+                                alt="Generic placeholder image">
                         </div>
-                        <div class="col col-md-9 d-flex align-items-center">
-                            <p class="lead"><strong>Akses</strong> dimanapun dan kapanpun melalui smartphone anda.</p>
+                        <div class="col col-md-9 d-block d-md-flex align-items-md-center">
+                            <p class="lead"><strong>Akses</strong> dimanapun dan kapanpun melalui <i>smartphone</i></p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col col-md-3">
-                            <img class="rounded-circle"
+                    <div class="row mb-5">
+                        <div class="col col-md-3 d-block d-md-flex align-items-md-center">
+                            <img class="rounded-circle w-100"
                                 src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
-                                alt="Generic placeholder image" width="100" height="100">
+                                alt="Generic placeholder image">
                         </div>
-                        <div class="col col-md-9 d-flex align-items-center">
-                            <p class="lead"><strong>Akses</strong> dimanapun dan kapanpun melalui smartphone anda.</p>
+                        <div class="col col-md-9 d-block d-md-flex align-items-md-center">
+                            <p class="lead"><strong>Profesional</strong> dalam menyajikan proyek atau event ke audiens
+                                yang dituju.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
+    <section id="howto" class="container">
         <div id="team" class="row pb-3">
             <div class="col mx-auto">
                 <div class="text-center">
-                    <h2>Our Team</h2>
+                    <h2>Apa Yang Dapat Kamu Lakukan?</h2>
                 </div>
             </div>
         </div>
         <div class="row pb-5">
             <div class="col-lg-3 text-center">
-                <div class="p-3">
-                    <img class="rounded-circle grayscale" src="asset/img/imam.jpg" alt="Generic placeholder image"
-                        width="200" height="200">
+                <div class="p-5">
+                    <img class="rounded-circle w-100"
+                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                        alt="Generic placeholder image">
                 </div>
-                <h3>Co-Founder</h3>
-                <p>Muhammad Imam Taufiq</p>
-                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
+                <h5>Bentuk Proyek</h5>
             </div>
             <div class="col-lg-3 text-center">
-                <div class="p-3">
-                    <img class="rounded-circle grayscale" src="asset/img/cua.jpg" alt="Generic placeholder image"
-                        width="200" height="200">
+                <div class="p-5">
+                    <img class="rounded-circle w-100"
+                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                        alt="Generic placeholder image">
                 </div>
-                <h3>Co-Founder</h3>
-                <p>Yosua Kristianto</p>
-                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
+                <h5>Eksekusi Proyek</h5>
             </div>
             <div class="col-lg-3 text-center">
-                <div class="p-3">
-                    <img class="rounded-circle grayscale" src="asset/img/made.jpg" alt="Generic placeholder image"
-                        width="200" height="200">
+                <div class="p-5">
+                    <img class="rounded-circle w-100"
+                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                        alt="Generic placeholder image">
                 </div>
-                <h3>Co-Founder</h3>
-                <p>Made Raja Adi</p>
-                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
+                <h5>Ciptakan Portfolio</h5>
             </div>
             <div class="col-lg-3 text-center">
-                <div class="p-3">
-                    <img class="rounded-circle grayscale" src="asset/img/hafiz.jpg" alt="Generic placeholder image"
-                        width="200" height="200">
+                <div class="p-5">
+                    <img class="rounded-circle w-100"
+                        src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw=="
+                        alt="Generic placeholder image">
                 </div>
-                <h3>Co-Founder</h3>
-                <p>Hafiz Bukhari</p>
-                <p><a href="#" class="btn btn-primary"><i class="fa fa-linkedin"></i></a></p>
+                <h5>Beritahu Sekelilingmu</h5>
             </div>
         </div>
+
     </section>
     <footer id="footer" class="bd-footer text-muted">
         <div class="container-fluid p-3 p-md-5">
