--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
     </section>
-    <section id="about" class="container">
+    <section id="about" class="container pb-5 pt-5">
         <div class="row pb-5">
             <div class="card-group w-100 ">
                 <div class="card border-0 p-5">
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </div>
-        <div class="row pb-5">
+        <div class="row">
             <div class="card-group w-100">
                 <div class="card border-0 p-5 ">
                     <div class="row h-100  align-items-center">
@@ -144,15 +144,13 @@
             </div>
         </div>
     </section>
-    <section id="howto" class="container">
-        <div id="team" class="row pb-3">
-            <div class="col mx-auto">
-                <div class="text-center">
-                    <h2>Apa Yang Dapat Kamu Lakukan?</h2>
-                </div>
+    <section id="howto" class="container pb-5 pt-5">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="header">Apa Yang Dapat Kamu Lakukan?</h2>
             </div>
         </div>
-        <div class="row pb-5">
+        <div class="row">
             <div class="col-lg-3 text-center">
                 <div class="p-5">
                     <img class="rounded-circle w-100"
@@ -186,7 +184,66 @@
                 <h5>Beritahu Sekelilingmu</h5>
             </div>
         </div>
-
+    </section>
+    <section id="article" class="container pb-5 pt-5">
+        <div class="row pb-5">
+            <div class="col-lg-12 text-center">
+                <h2 class="header">Baca Juga</h2>
+            </div>
+        </div>
+        <div class="row pb-5">
+            <div class="col-md-4 card-group">
+                <a href="#" class="card card-article mb-4 box-shadow">
+                    <img class="card-img-top"
+                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                        alt="Thumbnail [100%x225]"
+                        src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_174e2861acc%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_174e2861acc%22%3E%3Crect%20width%3D%22288%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.34375%22%20y%3D%22118.8%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                        data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                    <div class="card-body">
+                        <h5 class="feature-heading">Bangun Portfolio Dari Kegiatanmu</h5>
+                        <p class="card-text text-justify">This is a wider card with supporting text below as a natural
+                            lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">9 mins ago</small>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="card card-article mb-4 box-shadow">
+                    <img class="card-img-top"
+                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                        alt="Thumbnail [100%x225]"
+                        src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_174e2861acc%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_174e2861acc%22%3E%3Crect%20width%3D%22288%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.34375%22%20y%3D%22118.8%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                        data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                    <div class="card-body">
+                        <h5 class="feature-heading">Mudahnya Membuat Event Dengan LiveTask</h5>
+                        <p class="card-text text-justify">This is a wider card with supporting text below as a natural
+                            lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">9 mins ago</small>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="card card-article mb-4 box-shadow">
+                    <img class="card-img-top"
+                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                        alt="Thumbnail [100%x225]"
+                        src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_174e2861acc%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_174e2861acc%22%3E%3Crect%20width%3D%22288%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.34375%22%20y%3D%22118.8%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+                        data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
+                    <div class="card-body">
+                        <h5 class="feature-heading">Rekrut Volunteer Menjadi Lebih Mudah</h5>
+                        <p class="card-text text-justify">This is a wider card with supporting text below as a natural
+                            lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">9 mins ago</small>
+                    </div>
+                </a>
+            </div>
+        </div>
     </section>
     <footer id="footer" class="bd-footer text-muted">
         <div class="container-fluid p-3 p-md-5">
